# jupyverse

./: .fileid.db  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  Untitled.ipynb  config.yaml  dev-environment.yml  fps.toml  fps_cli_args.toml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
api/api/: README.md  pyproject.toml
api/api/src/jupyverse_api/: __init__.py  cli.py
api/resource_usage/: README.md  pyproject.toml
api/resource_usage/src/jupyverse_resource_usage/: __init__.py
jupyverse_api/: README.md  pyproject.toml
jupyverse_api/jupyverse_api/: __init__.py  asgi_websocket_transport.py  cli.py  exceptions.py
jupyverse_api/jupyverse_api/app/: __init__.py
jupyverse_api/jupyverse_api/auth/: __init__.py  models.py
jupyverse_api/jupyverse_api/contents/: __init__.py  models.py
jupyverse_api/jupyverse_api/environments/: __init__.py  models.py
jupyverse_api/jupyverse_api/file_id/: __init__.py
jupyverse_api/jupyverse_api/frontend/: __init__.py
jupyverse_api/jupyverse_api/jupyterlab/: __init__.py
jupyverse_api/jupyverse_api/kernel/: __init__.py
jupyverse_api/jupyverse_api/kernels/: __init__.py  models.py
jupyverse_api/jupyverse_api/lab/: __init__.py
jupyverse_api/jupyverse_api/login/: __init__.py
jupyverse_api/jupyverse_api/main/: __init__.py
jupyverse_api/jupyverse_api/nbconvert/: __init__.py
jupyverse_api/jupyverse_api/notebook/: __init__.py
jupyverse_api/jupyverse_api/resource_usage/: __init__.py
jupyverse_api/jupyverse_api/retrolab/: __init__.py
jupyverse_api/jupyverse_api/terminals/: __init__.py
jupyverse_api/jupyverse_api/yjs/: __init__.py  models.py
jupyverse_api/src/jupyverse_api/: __init__.py  asgi_websocket_transport.py  cli.py  exceptions.py
jupyverse_api/src/jupyverse_api/auth/: __init__.py  models.py
jupyverse_api/src/jupyverse_api/contents/: __init__.py  models.py
jupyverse_api/src/jupyverse_api/file_id/: __init__.py
jupyverse_api/src/jupyverse_api/file_watcher/: __init__.py
jupyverse_api/src/jupyverse_api/frontend/: __init__.py
jupyverse_api/src/jupyverse_api/jupyterlab/: __init__.py
jupyverse_api/src/jupyverse_api/kernel/: __init__.py
jupyverse_api/src/jupyverse_api/kernels/: __init__.py  models.py
jupyverse_api/src/jupyverse_api/lab/: __init__.py  lab.py
jupyverse_api/src/jupyverse_api/main/: __init__.py
jupyverse_api/src/jupyverse_api/notebook/: __init__.py
jupyverse_api/src/jupyverse_api/terminals/: __init__.py
jupyverse_api/src/jupyverse_api/yjs/: __init__.py
jupyverse_api/src/jupyverse_api/yroom/: __init__.py  server.py
jupyverse_api/src/jupyverse_api/yrooms/: __init__.py  client.py  server.py
jupyverse_api/src/jupyverse_api/ystore/: __init__.py
jupyverse_api/tests/: test_page_config.py  test_resource_lock.py
plugins/auth/: README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/auth/fps_auth/: __init__.py  backends.py  config.py  db.py  fixtures.py  main.py  models.py  routes.py
plugins/auth/src/fps_auth/: __init__.py  backends.py  config.py  db.py  main.py  models.py  routes.py
plugins/auth_base/: README.md  pyproject.toml
plugins/auth_base/fps_auth_base/: __init__.py  backend.py  models.py
plugins/auth_fief/: README.md  pyproject.toml  setup.cfg
plugins/auth_fief/fps_auth_fief/: __init__.py  backend.py  config.py  main.py  models.py  routes.py
plugins/auth_fief/src/fps_auth_fief/: __init__.py  backend.py  config.py  main.py  routes.py
plugins/auth_jupyterhub/: README.md  pyproject.toml
plugins/auth_jupyterhub/fps_auth_jupyterhub/: __init__.py  config.py  db.py  launch.py  main.py  models.py  routes.py
plugins/auth_jupyterhub/src/fps_auth_jupyterhub/: __init__.py  config.py  main.py  models.py  routes.py
plugins/contents/: README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/contents/fps_contents/: __init__.py  contents.py  fileid.py  main.py  models.py  routes.py  utils.py  watchfiles.py  webdav.py
plugins/contents/src/fps_contents/: __init__.py  main.py  routes.py
plugins/environment_micromamba/: README.md  pyproject.toml
plugins/environment_micromamba/fps_environment_micromamba/: __init__.py  main.py  micromamba.py
plugins/file_id/: README.md  pyproject.toml
plugins/file_id/fps_file_id/: __init__.py  file_id.py  main.py
plugins/file_id/src/fps_file_id/: __init__.py  file_id.py  main.py
plugins/file_watcher/: README.md  pyproject.toml
plugins/file_watcher/fps_file_watcher/: __init__.py  file_watcher.py  main.py
plugins/file_watcher/src/fps_file_watcher/: __init__.py  (+2 more)
plugins/file_watcher_poll/: README.md  pyproject.toml
plugins/file_watcher_poll/fps_file_watcher_poll/: __init__.py  file_watcher.py  main.py
plugins/frontend/: README.md  index.html  pyproject.toml
plugins/frontend/fps_frontend/: config.py  main.py
plugins/jupyter_server/: README.md  pyproject.toml
plugins/jupyterlab/: README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/jupyterlab/fps_jupyterlab/: __init__.py  config.py  index.py  main.py  routes.py
plugins/jupyterlab_git/: README.md  pyproject.toml
plugins/jupyterlab_git/tests/: conftest.py  test_integration.py  test_routes.py
plugins/kernel_subprocess/: COPYING.md  README.md  pyproject.toml
plugins/kernel_subprocess/fps_kernel_subprocess/: __init__.py  connect.py  kernel_subprocess.py  main.py
plugins/kernel_subprocess/tests/: test_restart.py
plugins/kernel_web_worker/: LICENSE  README.md  pyproject.toml
plugins/kernel_web_worker/fps_kernel_web_worker/: __init__.py  kernel_web_worker.py  main.py
plugins/kernels/: README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/kernels/fps_kernels/: config.py  main.py  models.py  routes.py
plugins/kernels/tests/: test_kernel_launcher.py
plugins/lab/: README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/lab/fps_lab/: __init__.py  config.py  main.py  routes.py  utils.py
plugins/login/: MANIFEST.in  README.md  index.html  pyproject.toml  setup.cfg  setup.py
plugins/login/fps_login/: main.py  routes.py
(+346 files in other folders)
