[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "jupyverse"
version = "0.10.31"
description = "A set of FPS plugins implementing a Jupyter server"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fps[click,fastapi,anycorn] >=0.5.2,<0.6.0",
  "fps-contents >=0.10.3,<0.11.0",
  "fps-file-id >=0.3.4,<0.4.0",
  "fps-file-watcher >=0.1.3,<0.2.0",
  "fps-kernel-subprocess >=0.1.5,<0.2.0",
  "fps-kernels >=0.10.5,<0.11.0",
  "fps-terminals >=0.9.3,<0.10.0",
  "fps-nbconvert >=0.9.3,<0.10.0",
  "fps-yjs >=0.11.3,<0.12.0",
  "fps-lab >=0.9.6,<0.10.0",
  "fps-frontend >=0.9.3,<0.10.0",
  "jupyverse-api >=0.12.5,<0.13.0",
  "rich-click >=1.6.1,<2",
  "eval-type-backport; python_version<'3.10'",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.optional-dependencies]
jupyterlab = ["fps-jupyterlab >=0.10.5,<0.11.0"]
notebook = ["fps-notebook>=0.9.7,<0.10.0"]
auth = ["fps-auth >=0.9.3,<0.10.0", "fps-login >=0.9.3,<0.10.0"]
auth-fief = ["fps-auth-fief >=0.9.4,<0.10.0"]
auth-jupyterhub = ["fps-auth-jupyterhub >=0.9.4,<0.10.0"]
noauth = ["fps-noauth >=0.9.4,<0.10.0"]
file-watcher-poll = ["fps-file-watcher-poll >=0.1.4,<0.2.0"]
kernel-web-worker = ["fps-kernel-web-worker >=0.1.7,<0.2.0"]
resource-usage = ["fps-resource-usage >=0.9.4,<0.10.0"]
webdav = ["fps-webdav >=0.9.4,<0.10.0"]

[dependency-groups]
test = [
  "ruff >=0.1.2",
  "mypy",
  "types-setuptools",
  "pytest",
  "pytest-timeout",
  "pytest-env",
  "httpx",
  "httpx-ws >=0.8.2",
  "requests",
  "ipykernel",
  "ypywidgets >=0.9.3,<0.10.0",
  "ypywidgets-textual >=0.5.0,<0.6.0",
  "trio",
]
docs = [
  "mkdocs",
  "mkdocs-material",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]

[tool.ruff]
line-length = 100
exclude = ["binder"]

[tool.uv.workspace]
members = ["plugins/*", "jupyverse_api"]

[tool.uv.sources]
jupyverse = { workspace = true }
jupyverse-api = { workspace = true }
fps-auth = { workspace = true }
fps-auth-fief = { workspace = true }
fps-auth-jupyterhub = { workspace = true }
fps-contents = { workspace = true }
fps-file-id = { workspace = true }
fps-file-watcher = { workspace = true }
fps-file-watcher-poll = { workspace = true }
fps-frontend = { workspace = true }
fps-jupyterlab = { workspace = true }
fps-kernel-subprocess = { workspace = true }
fps-kernel-web-worker = { workspace = true }
fps-kernels = { workspace = true }
fps-lab = { workspace = true }
fps-login = { workspace = true }
fps-nbconvert = { workspace = true }
fps-noauth = { workspace = true }
fps-notebook = { workspace = true }
fps-resource-usage = { workspace = true }
fps-terminals = { workspace = true }
fps-webdav = { workspace = true }
fps-yjs = { workspace = true }
