[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "jupyverse"
version = "0.14.0"
description = "A set of FPS plugins implementing a Jupyter server"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fps[click,fastapi,anycorn] >=0.6.0,<0.7.0",
  "fps-contents >=0.11.0,<0.12.0",
  "fps-file-id >=0.4.0,<0.5.0",
  "fps-file-watcher >=0.2.0,<0.3.0",
  "fps-kernel-subprocess >=0.2.0,<0.3.0",
  "fps-kernels >=0.11.0,<0.12.0",
  "fps-terminals >=0.10.0,<0.11.0",
  "fps-nbconvert >=0.10.0,<0.11.0",
  "fps-lab >=0.11.0,<0.12.0",
  "fps-frontend >=0.10.0,<0.11.0",
  "rich-click >=1.6.1,<2",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.optional-dependencies]
jupyterlab = ["fps-jupyterlab >=0.11.0,<0.12.0"]
notebook = ["fps-notebook>=0.10.0,<0.11.0"]
collaboration = [
  "jupyter-collaboration-ui",
  "jupyter-docprovider",
  "fps-yjs >=0.14.0,<0.15.0",
  "fps-ystore-sqlite >=0.2.0,<0.3.0",
  "fps-yrooms >=0.2.0,<0.3.0",
]
auth = ["fps-auth >=0.10.0,<0.11.0", "fps-login >=0.10.0,<0.11.0"]
auth-fief = ["fps-auth-fief >=0.10.0,<0.11.0"]
auth-jupyterhub = ["fps-auth-jupyterhub >=0.10.0,<0.11.0"]
noauth = ["fps-noauth >=0.10.0,<0.11.0"]
file-watcher-poll = ["fps-file-watcher-poll >=0.2.0,<0.3.0"]
kernel-web-worker = ["fps-kernel-web-worker >=0.2.0,<0.3.0"]
resource-usage = ["fps-resource-usage >=0.10.0,<0.11.0"]
webdav = ["fps-webdav >=0.10.0,<0.11.0"]
jupyterlab-git = ["fps-jupyterlab-git >=0.2.0,<0.3.0"]
jupyterlab-lsp = ["fps-jupyterlab-lsp >=0.2.0,<0.3.0"]

[dependency-groups]
test = [
  "ruff >=0.1.2",
  "mypy",
  "types-setuptools",
  "pytest",
  "pytest-timeout",
  "pytest-env",
  "pytest-rerunfailures",
  "httpx",
  "httpx-ws >=0.8.2",
  "ipykernel",
  "ypywidgets >=0.9.3,<0.10.0",
  "ypywidgets-textual >=0.5.0,<0.6.0",
  "trio",
]
docs = [
  "mkdocs",
  "mkdocs-material",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]

[tool.ruff]
line-length = 100
exclude = ["binder"]

[tool.uv.workspace]
members = ["api/*", "plugins/*"]

[tool.uv.sources]
jupyverse = { workspace = true }
jupyverse-api = { workspace = true }
jupyverse-auth = { workspace = true }
jupyverse-contents = { workspace = true }
jupyverse-file-id = { workspace = true }
jupyverse-file-watcher = { workspace = true }
jupyverse-frontend = { workspace = true }
jupyverse-jupyterlab = { workspace = true }
jupyverse-kernel = { workspace = true }
jupyverse-kernels = { workspace = true }
jupyverse-lab = { workspace = true }
jupyverse-login = { workspace = true }
jupyverse-nbconvert = { workspace = true }
jupyverse-notebook = { workspace = true }
jupyverse-resource-usage = { workspace = true }
jupyverse-terminals = { workspace = true }
jupyverse-yjs = { workspace = true }
jupyverse-yrooms = { workspace = true }
jupyverse-ystore = { workspace = true }
fps-auth = { workspace = true }
fps-auth-api = { workspace = true }
fps-auth-fief = { workspace = true }
fps-auth-jupyterhub = { workspace = true }
fps-contents = { workspace = true }
fps-file-id = { workspace = true }
fps-file-watcher = { workspace = true }
fps-file-watcher-poll = { workspace = true }
fps-frontend = { workspace = true }
fps-jupyterlab = { workspace = true }
fps-kernel-subprocess = { workspace = true }
fps-kernel-web-worker = { workspace = true }
fps-kernels = { workspace = true }
fps-lab = { workspace = true }
fps-login = { workspace = true }
fps-nbconvert = { workspace = true }
fps-noauth = { workspace = true }
fps-notebook = { workspace = true }
fps-resource-usage = { workspace = true }
fps-terminals = { workspace = true }
fps-webdav = { workspace = true }
fps-yjs = { workspace = true }
fps-ystore-sqlite = { workspace = true }
fps-yrooms = { workspace = true }
fps-jupyter-server = { workspace = true }
fps-jupyterlab-git = { workspace = true }
fps-jupyterlab-lsp = { workspace = true }
