[metadata]
name = jupyverse
version = attr: jupyverse.__version__
description = A set of FPS plugins implementing a Jupyter server
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Windows, Linux, Mac OS X
keywords = jupyter, server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
package_dir =
    "" = "jupyverse"
python_requires = >=3.7

install_requires =
  fps[uvicorn] >=0.0.8
  fps-login
  fps-auth
  fps-contents
  fps-kernels
  fps-terminals
  fps-nbconvert
  fps-yjs

[options.extras_require]
jupyterlab =
  fps-jupyterlab

retrolab =
  fps-retrolab

test =
  flake8
  black
  mypy
  pytest
  pytest-asyncio
  requests
  ipykernel

[options.entry_points]
console_scripts =
    jupyverse = fps_uvicorn.cli:app

[flake8]
max-line-length = 100

[tool:pytest]
asyncio_mode = strict
