[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyverse_api"
description = "The public API for Jupyverse"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "jupyverse", "api",
]
authors = [
  { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic >=2,<3",
  "fastapi >=0.95.0,<1",
  "rich-click >=1.6.1,<2",
  "asphalt >=4.11.0,<5",
  "asphalt-web[fastapi] >=1.1.0,<2",
]
dynamic = ["version"]

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/jupyter-server/jupyverse/jupyverse_api"

[project.scripts]
jupyverse = "jupyverse_api.cli:main"

[project.entry-points."asphalt.components"]
app = "jupyverse_api.main:AppComponent"
jupyverse = "jupyverse_api.main:JupyverseComponent"

[project.entry-points."jupyverse.components"]
app = "jupyverse_api.main:AppComponent"

[tool.hatch.version]
path = "jupyverse_api/__init__.py"
