[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyverse_api"
version = "0.10.0"
description = "The public API for Jupyverse"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "jupyverse", "api",
]
authors = [
  { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "importlib_metadata >=3.6; python_version<'3.10'",
  "pydantic >=2,<3",
  "fastapi >=0.95.0,<1",
  "fps >=0.4.0,<0.5.0",
  "anyio >=3.6.2,<5",
]

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/jupyter-server/jupyverse/jupyverse_api"

[project.scripts]
jupyverse = "jupyverse_api.cli:main"

[project.entry-points."fps.modules"]
app = "jupyverse_api.main:AppModule"
jupyverse = "jupyverse_api.main:JupyverseModule"

[project.entry-points."jupyverse.modules"]
app = "jupyverse_api.main:AppModule"

[tool.hatch.version]
path = "jupyverse_api/__init__.py"
