[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "jupyverse_api"
version = "0.12.4"
description = "The public API for Jupyverse"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["jupyverse", "api"]
authors = [
  { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
dependencies = [
  "pydantic >=2,<3",
  "fastapi >=0.95.0,<1",
  "fps >=0.5.2,<0.6.0",
  "anyio >=3.6.2,<5",
  "anyioutils >=0.7.4",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[project.urls]
Source = "https://github.com/jupyter-server/jupyverse/jupyverse_api"

[project.scripts]
jupyverse = "jupyverse_api.cli:main"

[project.entry-points."fps.modules"]
app = "jupyverse_api.main:AppModule"
jupyverse = "jupyverse_api.main:JupyverseModule"

[project.entry-points."jupyverse.modules"]
app = "jupyverse_api.main:AppModule"
