[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "jupyverse-resource-usage"
version = "0.1.2"
description = "The API for Jupyverse's resource usage"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi",
  "jupyverse-api >=0.15.0,<0.16.0",
  "jupyverse-auth >=0.2.0,<0.3.0",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Source = "https://github.com/jupyter-server/jupyverse/tree/main/api/resource_usage"
