[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_auth"
description = "An FPS plugin for the authentication API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "aiosqlite",
    "fastapi-users[sqlalchemy,oauth] >=12,<13",
    "jupyverse-api >=0.1.2,<1",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"asphalt.components"   = {auth = "fps_auth.main:AuthComponent"}
"jupyverse.components" = {auth = "fps_auth.main:AuthComponent"}

[tool.hatch.version]
path = "fps_auth/__init__.py"
