[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_auth"
description = "An FPS plugin for the authentication API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "aiosqlite",
    "fastapi-users[sqlalchemy,oauth] >=14.0.1,<15.0.0",
    "jupyverse-api >=0.7.0,<1",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"fps.modules"       = {auth = "fps_auth.main:AuthModule"}
"jupyverse.modules" = {auth = "fps_auth.main:AuthModule"}

[tool.hatch.version]
path = "fps_auth/__init__.py"
