[metadata]
name = fps_auth
version = attr: fps_auth.__version__
description = An FPS plugin implementing authentication
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  aiosqlite
  databases
  fastapi-users[sqlalchemy,oauth] >=9.1.1,<10

[options.entry_points]
fps_router =
    fps-auth = fps_auth.routes
fps_config =
    fps-auth = fps_auth.config
