[metadata]
name = fps_auth
version = attr: fps_auth.__version__
description = An FPS plugin for the authentication API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Windows, Linux, Mac OS X
keywords = jupyter, server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  fps >=0.0.8
  aiosqlite
  fastapi-users[sqlalchemy,oauth] >=10.1.4,<11

[options.entry_points]
fps_router =
    fps-auth = fps_auth.routes
fps_config =
    fps-auth = fps_auth.config
