[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_auth_fief"
description = "An FPS plugin for the authentication API, using Fief"
keywords = ["jupyter", "server", "fastapi", "plugins"]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "fief-client[fastapi]",
    "jupyverse-api >=0.1.2,<1",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"asphalt.components"   = {auth_fief = "fps_auth_fief.main:AuthFiefComponent"}
"jupyverse.components" = {auth_fief = "fps_auth_fief.main:AuthFiefComponent"}

[tool.hatch.version]
path = "fps_auth_fief/__init__.py"
