[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_auth_fief"
version = "0.9.4"
description = "An FPS plugin for the authentication API, using Fief"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "fief-client[fastapi]",
    "jupyverse-api >=0.12.0,<0.13.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules"       = {auth_fief = "fps_auth_fief.main:AuthFiefModule"}
"jupyverse.modules" = {auth_fief = "fps_auth_fief.main:AuthFiefModule"}
