[metadata]
name = fps_auth_fief
version = attr: fps_auth_fief.__version__
description = An FPS plugin for the authentication API, using Fief
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Windows, Linux, Mac OS X
keywords = jupyter, server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  fps >=0.0.8
  fief-client[fastapi]

[options.entry_points]
fps_config =
    fps-auth-fief = fps_auth_fief.config
fps_router =
    fps-auth-fief = fps_auth_fief.routes
jupyverse_auth =
    User = fps_auth_fief.models:UserRead
    current_user = fps_auth_fief.backend:current_user
    update_user = fps_auth_fief.backend:update_user
    websocket_auth = fps_auth_fief.backend:websocket_auth
