[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_auth_jupyterhub"
version = "0.9.0"
description = "An FPS plugin for the authentication API, using JupyterHbu"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "aiosqlite",
    "httpx >=0.24.1,<1",
    "jupyterhub >=4.0.1,<5",
    "jupyverse-api >=0.10.0,<0.11.0",
    "anyio",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links" ]

[project.entry-points]
"fps.modules"       = {auth_jupyterhub = "fps_auth_jupyterhub.main:AuthJupyterHubModule"}
"jupyverse.modules" = {auth_jupyterhub = "fps_auth_jupyterhub.main:AuthJupyterHubModule"}

[tool.hatch.version]
path = "fps_auth_jupyterhub/__init__.py"
