[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "fps_auth_jupyterhub"
version = "0.9.5"
description = "An FPS plugin for the authentication API, using JupyterHub"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiosqlite",
  "httpx >=0.24.1,<1",
  "jupyterhub >=4.0.1,<5",
  "jupyverse-api >=0.12.0,<0.13.0",
  "anyio",
]
license = "BSD-3-Clause"
license-files = ["COPYING.md"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules" = {auth_jupyterhub = "fps_auth_jupyterhub.main:AuthJupyterHubModule"}
"jupyverse.modules" = {auth_jupyterhub = "fps_auth_jupyterhub.main:AuthJupyterHubModule"}
