[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_contents"
description = "An FPS plugin for the contents API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.8"
dependencies = [
    "watchfiles >=0.18.1,<1",
    "aiosqlite >=0.17.0,<1",
    "anyio>=3.6.2,<4",
    "jupyverse-api >=0.1.2,<1",
]
dynamic = [ "version",]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"asphalt.components"   = {contents = "fps_contents.main:ContentsComponent"}
"jupyverse.components" = {contents = "fps_contents.main:ContentsComponent"}

[tool.hatch.version]
path = "fps_contents/__init__.py"
