[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "fps_contents"
version = "0.10.0"
description = "An FPS plugin for the contents API"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
    "anyio >=3.6.2,<5",
    "jupyverse-api >=0.10.0,<0.11.0",
]
[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.check-manifest]
ignore = [ ".*",]

[tool.jupyter-releaser]
skip = [ "check-links",]

[project.entry-points]
"fps.modules"       = {contents = "fps_contents.main:ContentsModule"}
"jupyverse.modules" = {contents = "fps_contents.main:ContentsModule"}

[tool.hatch.version]
path = "fps_contents/__init__.py"
