[metadata]
name = fps_contents
version = attr: fps_contents.__version__
description = An FPS plugin implementing the contents API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:

install_requires =
  fps >=0.0.8
  fps-auth
  anyio

[options.entry_points]
fps_router =
    fps-contents = fps_contents.routes
