[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fps_environment_micromamba"
version = "0.1.0"
description = "An FPS plugin for micromamba environments"
keywords = ["jupyter", "server", "fastapi", "plugins"]
requires-python = ">=3.9"
dependencies = [
  "jupyverse-api >=0.12.0,<0.13.0",
  "pyyaml >=6.0.2,<7.0.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[project.entry-points]
"fps.modules"       = {environment_micromamba = "fps_environment_micromamba.main:EnvironmentMicromambaModule"}
"jupyverse.modules" = {environment_micromamba = "fps_environment_micromamba.main:EnvironmentMicromambaModule"}
